##########################
# Setup.py Configuration #
##########################
[metadata]
name = more_node2vec
version = 0.0.3-dev
description = Utilities for node2vec and gensim
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cthoyt/more-node2vec
download_url = https://github.com/cthoyt/more-node2vec/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/more-node2vec/issues
    Source Code = https://github.com/cthoyt/more-node2vec

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    node2vec
    nodevectors
    deepwalk

[options]
install_requires =
    click
    more_click
    numpy
    pandas
    nodevectors
    sklearn

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    # sphinx-click
    sphinx-autodoc-typehints
    # sphinx_automodapi
    # To include LaTeX comments easily in your docs
    # texext

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = more_node2vec
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/more_node2vec
    .tox/*/lib/python*/site-packages/more_node2vec

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
